--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -11,23 +11,43 @@ footer{
 	font-variant: small-caps;
 }
 
-[epub|type~="z3998:verse"] p{
+[epub|type~="z3998:verse"] header{
+	text-align: center;
+	font-variant: small-caps;
+	margin-bottom: 1em;
+}
+
+[epub|type~="z3998:verse"] footer{
+	text-align: center;
+}
+
+[epub|type~="z3998:verse"] > p{
 	text-align: left;
 	text-indent: 0;
 }
 
-[epub|type~="z3998:verse"] p > span{
+[epub|type~="z3998:verse"] > p > span{
 	display: block;
 	text-indent: -1em;
 	padding-left: 1em;
 }
 
-[epub|type~="z3998:verse"] p > span + br{
+[epub|type~="z3998:verse"] > p > span + br{
 	display: none;
 }
 
 [epub|type~="z3998:verse"] + p{
 	text-indent: 0;
+}
+
+p span.i1{
+	text-indent: -1em;
+	padding-left: 2em;
+}
+
+p span.i2{
+	text-indent: -1em;
+	padding-left: 3em;
 }
 
 /* All epigraphs */
@@ -70,4 +90,9 @@ section[epub|type~="epigraph"] > *{
 [epub|type~="dedication"] footer > p:first-child{
 	text-align: center;
 	margin-left: 50%;
+}
+
+#chapter-7-18 [epub|type~="z3998:verse"] p{
+	text-align: center;
+	font-variant: all-small-caps;
 }
