--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -6,15 +6,15 @@ footer{
 	text-align: right;
 }
 
-.signature,
-[epub|type~="z3998:salutation"]{
-	font-variant: small-caps;
-}
-
-[epub|type~="z3998:verse"] header{
+blockquote header{
 	text-align: center;
 	font-variant: small-caps;
 	margin-bottom: 1em;
+}
+
+.signature,
+[epub|type~="z3998:salutation"]{
+	font-variant: small-caps;
 }
 
 [epub|type~="z3998:verse"] footer{
