Remove halfAsleep JS and replace with flexbox styling

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -195,6 +195,16 @@ section[epub|type~="epigraph"] > *{
 	font-variant: all-small-caps;
 }
 
+@supports (display: flex){
+	#chapter-5-1-the-fragment p:first-of-type{
+		text-indent: 0;
+	}
+	#chapter-5-1-the-fragment p:first-of-type > span{
+		display: flex;
+		justify-content: space-between;
+	}
+}
+
 #chapter-7-18 [epub|type~="z3998:verse"] p,
 #chapter-7-30 blockquote p,
 #chapter-7-32 blockquote p{
