Remove orWhether JS and replace with flexbox styling

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -205,6 +205,14 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
+@supports (display: flex){
+	#chapter-5-10 p > span{
+		display: flex;
+		justify-content: space-between;
+		white-space: nowrap;
+	}
+}
+
 #chapter-7-18 [epub|type~="z3998:verse"] p,
 #chapter-7-30 blockquote p,
 #chapter-7-32 blockquote p{
