--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -223,6 +223,13 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
+@supports (display: flex){
+	#chapter-5-31 p > span{
+		display: flex;
+		justify-content: space-between;
+	}
+}
+
 #chapter-7-18 [epub|type~="z3998:verse"] p,
 #chapter-7-30 blockquote p,
 #chapter-7-32 blockquote p{
