--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -237,6 +237,29 @@ section[epub|type~="epigraph"] > *{
 	text-align: center;
 }
 
+#chapter-6-14 p > span:first-of-type > span{
+	display: inline-block;
+	width: 5em;
+	text-align: center;
+	text-indent: 0;
+}
+
+@supports (display: flex){
+	#chapter-6-14 p > span ~ span{
+		display: flex;
+		justify-content: space-between;
+		text-indent: 0;
+	}
+
+	#chapter-6-14 p > span:last-child > span{
+		flex-grow: 1;
+	}
+
+	#chapter-6-14 p > span:last-child > span:last-child{
+		flex-grow: 4;
+	}
+}
+
 #chapter-7-18 [epub|type~="z3998:verse"] p,
 #chapter-7-30 blockquote p,
 #chapter-7-32 blockquote p{
