Remove asterisks JS in part 9 chapters 20/22 and replace with inline-block

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -319,3 +319,11 @@ section[epub|type~="epigraph"] > *{
 	text-align: center;
 	text-indent: 0;
 }
+
+#chapter-9-20 p > span,
+#chapter-9-22 p > span{
+	display: inline-block;
+	width: 3em;
+	text-align: center;
+	text-indent: 0;
+}
