--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -149,6 +149,24 @@ section[epub|type~="epigraph"] > *{
 }
 
 @supports (display: flex){
+	.maledictus-lines > span:first-child{
+		display: flex;
+		align-items: center;
+	}
+	.maledictus-lines > span:first-child::after{
+		content: "";
+		border-bottom: 1px solid;
+		height: 0;
+		flex-grow: 1;
+	}
+	.maledictus-lines > span:first-child ~ span{
+		display: flex;
+		justify-content: space-around;
+		text-indent: 0;
+	}
+}
+
+@supports (display: flex){
 	#chapter-4-27 > p > b{
 		display: flex;
 		align-items: center;
