--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -415,6 +415,12 @@ section[epub|type~="epigraph"] > *{
 	font-variant: small-caps;
 }
 
+#chapter-8-13 p > span{
+	display: inline-block;
+	width: 1.2em;
+	text-indent: 0;
+}
+
 #chapter-8-20 p > span{
 	display: inline-block;
 	width: 2em;
