Split part 3 chapter 11 into latin and english chapters
We can’t replicate the side-by-side layout of the original text in an ebook format.

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -33,6 +33,11 @@ figure + p{
 	text-indent: 0;
 }
 
+span[epub|type~="subtitle"]{
+	display: block;
+	font-weight: normal;
+}
+
 .blackletter{
 	font-family: "Standard Blackletter", serif;
 	font-variant: normal;
