Add flourish illustration to part 9 chapter 4

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -500,6 +500,10 @@ section[epub|type~="epigraph"] > *{
 	text-indent: 0;
 }
 
+#illustration-2 img{
+	width: 80%;
+}
+
 #chapter-9-20 p > span,
 #chapter-9-22 p > span{
 	display: inline-block;
