--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -415,6 +415,11 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
+#illustration-2 img,
+#illustration-3 img{
+	width: 90%;
+}
+
 @supports (display: flex){
 	#chapter-7-8 p:nth-last-child(2){
 		display: flex;
@@ -500,7 +505,7 @@ section[epub|type~="epigraph"] > *{
 	text-indent: 0;
 }
 
-#illustration-2 img{
+#illustration-4 img{
 	width: 80%;
 }
 
