--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -145,7 +145,7 @@ section[epub|type~="epigraph"] > *{
 	display: block;
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-1-4 > p > span{
 		display: flex;
 		align-items: center;
@@ -209,7 +209,7 @@ section[epub|type~="epigraph"] > *{
 	margin-top: 0.5em;
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	.maledictus-lines > span:first-child{
 		display: flex;
 		align-items: center;
@@ -236,7 +236,7 @@ section[epub|type~="epigraph"] > *{
 	height: 100vh;
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-4-12 p:last-child{
 		display: flex;
 		align-items: center;
@@ -247,14 +247,14 @@ section[epub|type~="epigraph"] > *{
 		white-space: nowrap;
 	}
 	#chapter-4-12 p:last-child > span:last-child::before{
-		content: "}";
+		content: "\007d";
 		font-size: 2em;
 		vertical-align: middle;
 		margin: 0 0.25em;
 	}
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-4-27 > p > b{
 		display: flex;
 		align-items: center;
@@ -292,7 +292,7 @@ section[epub|type~="epigraph"] > *{
 	font-variant: all-small-caps;
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-5-1-the-fragment p:first-of-type{
 		text-indent: 0;
 	}
@@ -302,7 +302,7 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-5-10 p > span{
 		display: flex;
 		justify-content: space-between;
@@ -310,7 +310,7 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-5-27 p{
 		text-indent: 0;
 	}
@@ -320,7 +320,7 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-5-31 p > span,
 	#chapter-5-32 p > span{
 		display: flex;
@@ -347,7 +347,7 @@ section[epub|type~="epigraph"] > *{
 	text-indent: 0;
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-6-14 p > span ~ span{
 		display: flex;
 		justify-content: space-between;
@@ -363,7 +363,7 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-6-17 p > span{
 		display: flex;
 		justify-content: space-between;
@@ -412,7 +412,7 @@ section[epub|type~="epigraph"] > *{
 	min-height: 10em;
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-6-39 p > span{
 		display: flex;
 		justify-content: space-between;
@@ -429,7 +429,7 @@ section[epub|type~="epigraph"] > *{
 	width: 90%;
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-7-8 p:nth-last-child(2){
 		display: flex;
 		align-items: center;
@@ -470,7 +470,7 @@ section[epub|type~="epigraph"] > *{
 	padding: 0 .25em;
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-7-31 .brace{
 		display: flex;
 		align-items: center;
@@ -479,7 +479,7 @@ section[epub|type~="epigraph"] > *{
 		display: block;
 	}
 	#chapter-7-31 .brace > span:last-child::before{
-		content: "}";
+		content: "\007d";
 		font-size: 2em;
 		vertical-align: middle;
 		margin: 0 0.25em;
@@ -526,7 +526,7 @@ section[epub|type~="epigraph"] > *{
 	text-indent: 0;
 }
 
-@supports (display: flex){
+@supports(display: flex){
 	#chapter-9-28 p > span{
 		display: flex;
 		justify-content: space-between;
