Rework as a table the text in part 7 chapter 10

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -449,6 +449,10 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
+#chapter-7-10 tr:first-child{
+	font-style: italic;
+}
+
 #chapter-7-18 [epub|type~="z3998:verse"] p,
 #chapter-7-30 blockquote p,
 #chapter-7-32 blockquote p,
