Markup letter in Slawkenbergius

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -291,6 +291,11 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
+#slawkenbergius-en [epub|type~="z3998:recipient"]{
+	font-style: normal;
+	text-indent: 2em;
+}
+
 #slawkenbergius-en > p:last-child{
 	text-align: center;
 	text-indent: 0;
