Styling for thoughts in part 9, chapter 20

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -536,8 +536,14 @@ section[epub|type~="epigraph"] > *{
 	width: 80%;
 }
 
-#chapter-9-20 p > span,
-#chapter-9-22 p > span{
+#chapter-9-20 blockquote{
+	font-style: italic;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+#chapter-9-20 > p > span,
+#chapter-9-22 > p > span{
 	display: inline-block;
 	width: 3em;
 	text-align: center;
