Handle class="invisible"
Source uses this to indent text correctly. We want to retain the indenting, but we don’t always want the text to be read out from an accessibility point of view, so let’s add aria-hidden where appropriate.

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -57,6 +57,10 @@ span[epub|type~="subtitle"]{
 	text-indent: 0;
 }
 
+.invisible{
+	visibility: hidden;
+}
+
 .signature,
 [epub|type~="z3998:salutation"]{
 	font-variant: small-caps;
