--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -332,20 +332,12 @@ section[epub|type~="epigraph"] > *{
 }
 
 @supports(display: flex){
-	#chapter-5-27 p{
-		text-indent: 0;
-	}
-	#chapter-5-27 p > span{
-		display: flex;
-		justify-content: space-between;
-	}
-}
-
-@supports(display: flex){
+	#chapter-5-27 p > span,
 	#chapter-5-31 p > span,
 	#chapter-5-32 p > span{
 		display: flex;
 		justify-content: space-between;
+		text-indent: 0;
 	}
 }
 
