Proofing fixes for book 6
- Fix some italics and general styling issues
- Semantics updates, in particular removal of ems or conversion to plain italics.
- Add some missing layout styles

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -8,7 +8,8 @@
 }
 
 i i,
-i em{
+i em,
+i b{
 	font-style: normal;
 }
 
@@ -394,8 +395,16 @@ section[epub|type~="epigraph"] > *{
 	padding: 0;
 }
 
+#chapter-6-19 ul + p{
+	text-indent: 1em;
+}
+
 #chapter-6-19 div{
 	display: flex;
+}
+
+#chapter-6-19 > div > p{
+	white-space: nowrap;
 }
 
 #chapter-6-19 > div > ul{
