Make sure endnote links are never italicised

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -81,6 +81,10 @@ span[epub|type~="subtitle"]{
 	visibility: hidden;
 }
 
+a[epub|type~="noteref"]{
+	font-style: normal;
+}
+
 .signature,
 [epub|type~="z3998:salutation"]{
 	font-variant: small-caps;
