--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -370,6 +370,17 @@ section[epub|type~="epigraph"] > *{
 	}
 }
 
+#chapter-5-27 p > span,
+#chapter-5-31 p > span,
+#chapter-5-32 p > span{
+	display: table;
+	width: 100%;
+}
+#chapter-5-27 p > span > span,
+#chapter-5-31 p > span > span,
+#chapter-5-32 p > span > span{
+	display: table-cell;
+}
 @supports(display: flex){
 	#chapter-5-27 p > span,
 	#chapter-5-31 p > span,
