Fix epub|type CSS selector

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -72,7 +72,7 @@ td{
 	text-indent: 0;
 }
 
-[epub:type~="z3998:signature"],
+[epub|type~="z3998:signature"],
 [epub|type~="z3998:salutation"]{
 	font-variant: small-caps;
 }
