--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -70,6 +70,10 @@ td{
 	text-indent: 0;
 }
 
+[epub|type~="z3998:salutation"] + p{
+	text-indent: 0;
+}
+
 [epub|type~="z3998:signature"],
 [epub|type~="z3998:salutation"]{
 	font-variant: small-caps;
