--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -90,7 +90,7 @@ td{
 
 [epub|type~="z3998:song"] > p,
 [epub|type~="z3998:verse"] > p{
-	text-align: left;
+	text-align: initial;
 	text-indent: 0;
 }
 
@@ -134,7 +134,7 @@ section[epub|type~="epigraph"] > *{
 	margin: auto;
 	margin-top: 3em;
 	max-width: 80%;
-	text-align: left;
+	text-align: initial;
 }
 
 @supports(display: flex){
