Fix chapter-2-17 style
The two <blockquote>s should have the same styling

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -254,7 +254,7 @@ section[epub|type~="epigraph"] > *{
 	font-style: normal;
 }
 
-#chapter-2-17 blockquote ~ blockquote{
+#chapter-2-17 blockquote{
 	margin-left: 0;
 	margin-right: 0;
 }
