--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -59,6 +59,14 @@ figure.full-page{
 	}
 }
 
+@supports(display: grid){
+	figure.full-page{
+		display: grid;
+		grid-template-rows: 1fr auto;
+		max-height: 100%;
+	}
+}
+
 table{
 	border-collapse: collapse;
 }
